# pihelper-android

./: .gitmodules  build.gradle  build.gradle.kts  gradle.properties  keystore.properties.sample  settings.gradle  settings.gradle.kts
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/wbrawner/pihelper/: AddPiHelperViewModel.kt  Extensions.kt  MainActivity.kt  MainFragment.kt  PiHelperApplication.kt  PiHelperModule.kt  PiHelperViewModel.kt  RetrieveApiKeyFragment.kt
android/src/main/res/drawable/: ic_launcher_background.xml  ic_settings.xml  vertical_rule.xml
android/src/main/res/layout/: activity_main.xml  fragment_add_pi_hole.xml  fragment_retrieve_api_key.xml  or_divider.xml
android/src/main/res/layout-w800dp/: fragment_add_pi_hole.xml  fragment_main.xml  fragment_retrieve_api_key.xml
android/src/main/res/menu/: main.xml
android/src/main/res/navigation/: nav_graph.xml
android/src/main/res/values/: styles.xml
android/src/main/res/xml/: shortcuts.xml
app/: build.gradle  build.gradle.kts  google-services.json  proguard-rules.pro
app/src/androidTest/assets/json/: status_success.json  summary_disabled.json  summary_enabled.json  top_items_success.json
app/src/androidTest/java/com/wbrawner/pihelper/: AddScreenRobot.kt  AuthScreenRobot.kt  ExampleInstrumentedTest.kt  FakeAPIService.kt  HiltTestRunner.kt  MainTests.kt  SetupTests.kt  StartupTests.kt  TestModule.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/wbrawner/pihelper/: AddPiHelperViewModel.kt  AddPiHoleFragment.kt  (+15 more)
app/src/main/res/drawable/: background_splash.xml  horizontal_rule.xml  ic_app_logo.xml  ic_launcher_foreground.xml  ic_pause.xml  ic_pause_red.xml  ic_play_arrow.xml  ic_play_arrow_green.xml  ic_shortcut_enable.xml  ic_shortcut_pause.xml
app/src/main/res/drawable-anydpi-v24/: ic_notification.xml
app/src/main/res/drawable-v26/: ic_shortcut_enable.xml  ic_shortcut_pause.xml
app/src/main/res/layout/: activity_main.xml  dialog_disable_custom_time.xml  fragment_add_pi_hole.xml  fragment_info.xml  fragment_main.xml  fragment_retrieve_api_key.xml  fragment_scan_network.xml  or_divider.xml
app/src/main/res/layout-w800dp/: or_divider.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-night/: colors.xml  styles.xml
app/src/main/res/xml/: shortcuts.xml
app/src/main/res/xml-v25/: shortcuts.xml
desktop/: build.gradle.kts
desktop/src/main/kotlin/: Main.kt
desktop/src/main/resources/: icon.icns
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libpihelper/: build.gradle
libpihelper/src/main/: AndroidManifest.xml
libpihelper/src/main/c/: CMakeLists.txt  pihelper-android.c
libpihelper/src/main/c/arm64-v8a/: libcurl.la
libpihelper/src/main/c/armeabi-v7a/: libcurl.la
libpihelper/src/main/c/include/: Makefile
libpihelper/src/main/c/include/curl/: Makefile
libpihelper/src/main/c/include/json-c/: config.h
libpihelper/src/main/c/x86/: libcurl.la
libpihelper/src/main/c/x86_64/: libcurl.la
piholeclient/: build.gradle  build.gradle.kts  consumer-rules.pro  proguard-rules.pro
piholeclient/src/main/: AndroidManifest.xml
piholeclient/src/main/res/values/: strings.xml
shared/: build.gradle.kts
shared/src/androidMain/: AndroidManifest.xml
shared/src/commonMain/resources/img/: ic_app_logo.xml
wearos/: build.gradle
wearos/src/main/: AndroidManifest.xml
wearos/src/main/res/layout/: activity_main.xml
wearos/src/main/res/values/: strings.xml
(+43 files in other folders)
